# agentic-core-lab

./: .gitignore  README.md  package.json  pyproject.toml
agentic_core/: __init__.py  agent.py  chat.py  cli.py  contracts.py  eval_dashboard.py  eval_dataset.py  eval_diff.py  eval_harness.py  eval_history.py  eval_judge.py  eval_judge_registry.py  eval_replay.py  eval_review.py  eval_review_store.py  eval_sampling.py  eval_server.py  event_log.py  event_writer.py  json_utils.py  memory.py  memory_admin.py  memory_lifecycle.py  memory_policy.py  middleware.py  ollama_client.py  planner.py  responder.py  response_policy.py  safety_policy.py  schemas.py  tenant_policy.py  tool_summary.py  tools.py  trace_view.py
docs/: acceptance-checklist.md  architecture.md  core-link.md  development-log.md  evals.md  module-learning-guide.md  next-implementation-plan.md  operations.md  persistent-event-log-production-plan.md  production-readiness-audit.md  response-policy-design.md  tutorial.md  typed-state-refactor-plan.md
evalops/: dataset.py  harness.py  history.py  judge.py  judge_registry.py  replay.py  review.py  review_store.py  sampling.py
examples/: run_memory_demo.py
src/: agent.js  index.js  memory.js  planner.js  tools.js
tests/: test_auth_tokens.py  test_contracts.py  test_eval_dashboard.py  test_eval_dataset.py  test_eval_diff.py  test_eval_harness.py  test_eval_history.py  test_eval_judge.py  test_eval_judge_registry.py  test_eval_replay.py  test_eval_review.py  test_eval_review_store.py  test_eval_sampling.py  test_eval_server.py  test_event_log.py  (+25 more)
(+25 files in other folders)
