[project]
name = "agentic-core-lab"
version = "0.1.0"
description = "Python lab for agentic application core loop, memory policy, and Ollama/Hermes planner."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
files = ["agentic_core", "evalops"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
